Server side Rendering

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
   <link rel="stylesheet" href="/assets/styles.css"/>
 </head>
-
 <body>
-  <div id="app">{{hello}}</div>
+  {{ APP }}
+  {{ STATE }}
   <script src="/assets/js/app.js"></script>
 </body>
 
